[WIP] in-flight version1 rewrite, simplifying and migrating to nbdev2

--- a/nbs/params.ipynb
+++ b/nbs/params.ipynb
@@ -1,25 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hide\n",
-    "# default_exp params"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Notebook Parameter Management\n",
+    "---\n",
+    "output-file: params.html\n",
+    "title: Notebook Parameter Management\n",
     "\n",
-    "Parameterised notebooks can be used to:\n",
-    "\n",
-    "* Parallelise your workflow: run the notebook you are working on but with a different parameter set\n",
-    "* Different context: execute from a script or scheduled job instead of the Web Browser. "
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -28,7 +18,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | include: false\n",
+    "# | default_exp params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
     "\n",
     "import os\n",
     "from io import StringIO\n",
@@ -36,7 +36,9 @@
     "from typing import Iterable\n",
     "\n",
     "import nbformat\n",
-    "from nbdev.export import find_default_export, get_config, nbglob, read_nb\n",
+    "from execnb.nbio import read_nb\n",
+    "from nbdev.config import get_config\n",
+    "from nbdev.doclinks import nbglob\n",
     "from nbformat.notebooknode import NotebookNode"
    ]
   },
@@ -56,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def find_params_cell(nb: NotebookNode):\n",
@@ -89,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_params(nb: NotebookNode):\n",
@@ -104,7 +106,7 @@
    "outputs": [],
    "source": [
     "params_code = extract_params(read_nb(Path(test_nb)))\n",
-    "assert params_code.startswith(\"# export\")\n",
+    "assert params_code.replace(\" \", \"\").startswith(\"#|export\")\n",
     "assert \"some_param\" in params_code\n",
     "assert \"some_params\" in params_code\n",
     "assert \"input_path\" in params_code\n",
@@ -117,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "DEFAULT_PARAMS_CELL = {\n",
     "    \"cell_type\": \"code\",\n",
@@ -134,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def add_missing_params_cell(nb_path: Path, persist: bool = True):\n",
@@ -152,7 +154,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping /home/sagemaker-user/git/sciflow/nbs/test/test_multistep.ipynb already has parameters cell\n"
+     ]
+    }
+   ],
    "source": [
     "with_params = os.path.join(Path(\".\").resolve(), \"test\", \"test_multistep.ipynb\")\n",
     "without_params = os.path.join(\n",
@@ -171,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_params_to_file(nb_path: Path, params_file_path: Path):\n",
@@ -198,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def list_mod_files(files):\n",
@@ -219,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_as_files(suffix=\"_params.py\"):\n",
@@ -239,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exporti\n",
+    "# | exporti\n",
     "\n",
     "\n",
     "def _lines_to_dict(lines: Iterable[str]):\n",
@@ -258,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_params_as_dict(params_file_path: Path):\n",
@@ -286,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def params_as_dict(nb_path: Path):\n",
@@ -309,9 +319,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3 (conda-env/4)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/conda-env/4"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
