--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -1,12 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# default_exp parse_module"
+    "---\n",
+    "output-file: parse_module.html\n",
+    "title: Write out Test Data\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -15,15 +18,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | default_exp parse_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
     "\n",
     "import ast\n",
     "import os\n",
     "import re\n",
-    "from dataclasses import asdict, dataclass\n",
+    "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
-    "import networkx as nx\n",
     "import pandas as pd\n",
     "from nbdev.export import get_config"
    ]
@@ -34,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_module_only(package_module_name):\n",
@@ -71,12 +82,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_step_code(\n",
     "    module_path: Path,\n",
-    "    export_comments=(\"# cell\", \"# internal cell\", \"# comes from\"),\n",
+    "    export_comments=(\"#|export\", \"#|exporti\", \"#|exports\"),\n",
     "    remove_comment_lines=True,\n",
     "):\n",
     "    with open(module_path, \"r\") as module_file:\n",
@@ -85,9 +96,10 @@
     "    step_code = {}\n",
     "    active_step = None\n",
     "    for l in lines.tolist():\n",
-    "        if l.lower().startswith(\"# step\"):\n",
-    "            active_step = l.split(\":\")[1].strip()\n",
-    "        elif l.lower().startswith(export_comments):\n",
+    "        trimmed_line = l.lower().replace(\" \", \"\")\n",
+    "        if trimmed_line.startswith(\"#|export_step\"):\n",
+    "            active_step = trimmed_line.split(\"#|export_step\")[1].strip()\n",
+    "        elif trimmed_line.startswith(export_comments):\n",
     "            active_step = None\n",
     "        if l.startswith(\"#\") and remove_comment_lines:\n",
     "            continue\n",
@@ -122,7 +134,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[53], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m step_code \u001b[38;5;241m=\u001b[39m extract_step_code(test_module)\n\u001b[1;32m      3\u001b[0m step_names \u001b[38;5;241m=\u001b[39m step_code\u001b[38;5;241m.\u001b[39mkeys()\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfirst\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpreprocess\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlast\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlist\u001b[39m(step_names)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m step_code[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfirst\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m#\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m extract_step_code(test_module, remove_comment_lines\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfirst\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mstartswith(\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m#\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m )\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "test_module = os.path.join(get_config().path(\"lib_path\"), \"test\", \"test_export.py\")\n",
     "step_code = extract_step_code(test_module)\n",
@@ -146,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "class FuncLister(ast.NodeVisitor):\n",
@@ -205,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_return_stmt(func_name, code):\n",
@@ -329,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def parse_step(step_code: str):\n",
@@ -356,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_return_var_names(step):\n",
@@ -413,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_steps(module_path: Path):\n",
@@ -437,7 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def _convert_return_stmt(numbered_step):\n",
@@ -445,65 +469,13 @@
     "    step[\"return_stmt\"] = \"\" if not step[\"return_stmt\"] else step[\"return_stmt\"]\n",
     "    return number, step"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def extract_dag(test_module: Path):\n",
-    "    steps = extract_steps(test_module)\n",
-    "\n",
-    "    node_ids = list(range(len(steps)))\n",
-    "    numbered_steps = zip(node_ids, [asdict(step) for step in steps])\n",
-    "\n",
-    "    dag = nx.Graph()\n",
-    "    dag.add_nodes_from([_convert_return_stmt(s) for s in numbered_steps])\n",
-    "    dag.add_edges_from(list(zip(node_ids, node_ids[1:])))\n",
-    "    return dag"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dag = extract_dag(test_module)\n",
-    "assert [(0, 1), (1, 2), (2, 3)] == list(dag.edges)\n",
-    "assert [0, 1, 2, 3] == list(dag.nodes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Write out Test Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # TODO fix graph exports - seems to be quite dependent on entworkx version.\n",
-    "# nx.write_graphml_lxml(\n",
-    "#   dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.graphml\")\n",
-    "# )\n",
-    "# nx.write_gml(dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.gml\"))"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
