--- a/nbs/s3_utils.ipynb
+++ b/nbs/s3_utils.ipynb
@@ -1,21 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# default_exp s3_utils"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# S3 Utilities\n",
+    "---\n",
+    "description: Provides utility functions for interacting with Amazon S3\n",
+    "output-file: s3_utils.html\n",
+    "title: S3 Utilities\n",
     "\n",
-    "> Provides utility functions for interacting with Amazon S3"
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -24,7 +19,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | default_exp s3_utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
     "\n",
     "import json\n",
     "import os\n",
@@ -48,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def is_valid_bucket(bucket_name):\n",
@@ -94,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def s3_join(*args):\n",
@@ -121,7 +125,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
+    "\n",
+    "\n",
     "def objects_exist_in_dir(s3_res, bucket_name, prefix):\n",
     "    bucket = s3_res.Bucket(bucket_name)\n",
     "    all_keys = [el.key for el in bucket.objects.filter(Prefix=prefix)]\n",
@@ -132,14 +138,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sciflow/sciflow_testing_14087f979d48/s3_utils'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "missing_bucket = \"nobuckethere\"\n",
     "invalid_bucket = \"invalid_bucket_name\"\n",
-    "test_root = f\"sciflow_testing_{str(uuid.uuid4()).split('-')[-1]}\"\n",
+    "test_stem = f\"sciflow_testing_{str(uuid.uuid4()).split('-')[-1]}\"\n",
+    "test_root = s3_join(\"sciflow\", test_stem)\n",
     "test_dir = f\"{test_root}/s3_utils\"\n",
     "lib_dir = s3_join(test_dir, \"sciflow\")\n",
-    "local_dir = f\"/tmp/{test_root}/sciflow\""
+    "local_dir = f\"/tmp/{test_root}/sciflow\"\n",
+    "test_dir"
    ]
   },
   {
@@ -159,7 +178,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
+    "\n",
+    "\n",
     "def delete_dir(s3_res, bucket_name, prefix):\n",
     "    bucket = s3_res.Bucket(bucket_name)\n",
     "    bucket.objects.filter(Prefix=prefix).delete()"
@@ -173,6 +194,17 @@
    "source": [
     "prepare_env()\n",
     "bucket_name = os.environ[\"SCIFLOW_BUCKET\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"s3://prosandboxpdlras3/sciflow/dataframe_artifact.csv\")"
    ]
   },
   {
@@ -211,7 +243,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
+    "\n",
+    "\n",
     "def bucket_exists(s3_res, bucket_name):\n",
     "    if not is_valid_bucket(bucket_name):\n",
     "        raise ValueError(\"Bucket name does not follow AWS bucket naming rules\")\n",
@@ -227,7 +261,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 20.4 ms, sys: 5.85 ms, total: 26.3 ms\n",
+      "Wall time: 77.6 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "assert bucket_exists(s3_res, bucket_name)\n",
@@ -247,7 +290,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
+    "\n",
+    "\n",
     "def list_s3_subdirs(s3_res, bucket_name, prefix):\n",
     "    bucket = s3_res.Bucket(bucket_name)\n",
     "    all_keys = [obj.key for obj in bucket.objects.filter(Prefix=prefix)]\n",
@@ -287,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def list_bucket(bucket_name, prefix, s3_res=None):\n",
@@ -314,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def put_data(s3_res, bucket_name, key, binary_data):\n",
@@ -351,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def load_json(s3_res, bucket_name, key):\n",
@@ -384,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def upload_directory(s3_client, path, bucket_name, prefix):\n",
@@ -396,12 +441,14 @@
     "                for f in files\n",
     "                if f.split(\".\")[-1] == \"py\" and root.find(\"ipynb_checkpoints\") == -1\n",
     "            ]:\n",
-    "\n",
     "                if root != path:\n",
     "                    sub_dir = root.replace(path, \"\").lstrip(\"/\")\n",
     "                    upload_key = f\"{prefix}/{sub_dir}/{file}\"\n",
     "                else:\n",
     "                    upload_key = f\"{prefix}/{file}\"\n",
+    "                print(\n",
+    "                    f\"Uploading file: {os.path.join(root, file)} to: {bucket_name}/{upload_key}\"\n",
+    "                )\n",
     "                s3_client.upload_file(os.path.join(root, file), bucket_name, upload_key)"
    ]
   },
@@ -409,12 +456,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/utils.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/utils.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/export_step.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/export_step.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/data_handler.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/data_handler.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/_modidx.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/_modidx.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/init.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/init.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/params.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/params.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/__init__.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/__init__.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/parse_module.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/parse_module.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/test/test_export.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/test/test_export.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/test/test_data_handling.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/test/test_data_handling.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/test/test_module.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/test/test_module.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/test/test_multistep_no_params.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/test/test_multistep_no_params.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/test/test_multistep.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/test/test_multistep.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/test/test_export_params.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/test/test_export_params.py\n",
+      "Uploading file: /home/sagemaker-user/git/sciflow/sciflow/test/__init__.py to: prosandboxpdlras3/sciflow/sciflow_testing_14087f979d48/s3_utils/sciflow/test/__init__.py\n"
+     ]
+    }
+   ],
    "source": [
     "lib_name = get_config().get(\"lib_name\")\n",
     "\n",
     "assert not (\n",
-    "    objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/{lib_name}/_nbdev.py\")\n",
+    "    objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/{lib_name}/_modidx.py\")\n",
     ")\n",
     "assert not (\n",
     "    objects_exist_in_dir(\n",
@@ -426,13 +495,10 @@
     "    s3_client,\n",
     "    str(Path(lib_path(), get_config().lib_path)),\n",
     "    bucket_name,\n",
-    "    Path(test_dir, get_config().lib_path),\n",
+    "    lib_dir,\n",
     ")\n",
     "\n",
-    "assert objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/{lib_name}/_nbdev.py\")\n",
-    "assert objects_exist_in_dir(\n",
-    "    s3_res, bucket_name, f\"{test_dir}/{lib_name}/experiment/__init__.py\"\n",
-    ")"
+    "assert objects_exist_in_dir(s3_res, bucket_name, f\"{lib_dir}/_modidx.py\")"
    ]
   },
   {
@@ -441,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def download_directory(s3_client, s3_res, bucket_name, remote_key, local_dir):\n",
@@ -465,14 +531,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert not Path(f\"{local_dir}/_nbdev.py\").exists()\n",
+    "assert not Path(f\"{local_dir}/_modidx.py\").exists()\n",
     "\n",
     "download_directory(s3_client, s3_res, bucket_name, lib_dir, local_dir)\n",
     "\n",
     "import shutil\n",
     "\n",
-    "assert Path(local_dir, \"_nbdev.py\").exists()\n",
-    "assert Path(local_dir, \"experiment\", \"__init__.py\").exists()"
+    "assert Path(local_dir, \"_modidx.py\").exists()"
    ]
   },
   {
@@ -491,7 +556,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "import io\n",
@@ -555,9 +620,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
