--- a/nbs/test/test_data_handling.ipynb
+++ b/nbs/test/test_data_handling.ipynb
@@ -1,12 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# default_exp test.test_data_handling"
+    "---\n",
+    "{}\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -15,7 +17,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | default_exp test.test_data_handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
     "\n",
     "from pathlib import Path\n",
     "from typing import Any, Dict, List\n",
@@ -27,14 +38,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "int_param = 3\n",
@@ -44,8 +51,8 @@
     "model_path = Path(\".\").resolve().parent\n",
     "dict_param = {\"a\": {\"b\": {\"c\": \"abc\"}}, \"another_key\": [1, 2, 3]}\n",
     "list_param = [i for i in range(10**4)]\n",
-    "ones = np.ones(10**7)\n",
-    "text = np.repeat(\"some string that takess space and more of it\", 10**7)\n",
+    "ones = np.ones(10**4)\n",
+    "text = np.repeat(\"some string that takess space and more of it\", 10**4)\n",
     "series_param = pd.Series(text)\n",
     "df_param = pd.DataFrame({\"a\": ones, \"b\": ones, \"c\": ones, \"d\": text})"
    ]
@@ -56,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:scalar\n",
+    "# | export_step scalar\n",
     "\n",
     "\n",
     "def scalar(int_param: int, float_param: float, str_param: str):\n",
@@ -71,7 +78,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int_param: 3\n",
+      "float_param: 1.1\n",
+      "str_param: Sciflow 🔬\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'int_param': 3}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scalar(int_param, float_param, str_param)"
    ]
@@ -82,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:py_advanced\n",
+    "# | export_step py_advanced\n",
     "\n",
     "\n",
     "def py_advanced(input_path: Path, list_param: List[int], dict_param: Dict[str, Any]):\n",
@@ -95,7 +122,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_path: /home/sagemaker-user/git/sciflow/nbs/test\n",
+      "input_path: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "input_path: {'a': {'b': {'c': 'abc'}}, 'another_key': [1, 2, 3]}\n"
+     ]
+    }
+   ],
    "source": [
     "py_advanced(input_path, list_param, dict_param)"
    ]
@@ -106,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:pandas\n",
+    "# | export_step pandas\n",
     "\n",
     "\n",
     "def pandas(series_param: pd.Series, df_param: pd.DataFrame):\n",
@@ -118,7 +155,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "series: (10000000,)\n",
+      "df: (10000000, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "pandas(series_param, df_param)"
    ]
@@ -126,9 +172,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
