--- a/nbs/data_handler.ipynb
+++ b/nbs/data_handler.ipynb
@@ -1,21 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Advanced Parameter Handling\n",
-    "\n",
-    "> Additional utilities to handle complex types that are not always supported by workflow frameworks."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp data_handler"
+    "# | default_exp data_handler"
    ]
   },
   {
@@ -34,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "import os\n",
     "import sys\n",
@@ -45,7 +36,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from nbdev.export import get_config\n",
+    "from nbdev.config import get_config\n",
     "\n",
     "from sciflow.params import params_as_dict"
    ]
@@ -56,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "supported_parameters = (str, int, float)\n",
     "supported_args = (Dict, List)\n",
@@ -73,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "@dataclass\n",
@@ -92,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def load_module(fully_qualified_module_name):\n",
@@ -120,38 +111,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sys.modules.get(fully_qualified_module_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test_data_handling'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "root_path = str(get_config().path(\"root_path\"))\n",
     "if not root_path in sys.path:\n",
     "    sys.path.append(root_path)\n",
     "package = \".\".join(fully_qualified_module_name.split(\".\")[:-1])\n",
     "fully_qualified_module_name.split(\".\")[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "package"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "module = import_module(fully_qualified_module_name, package)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "module"
    ]
   },
   {
@@ -166,8 +150,7 @@
     "assert load_module(\"sciflow.test.test_multistep_no_params\").traffic_percent == 1\n",
     "assert load_module(\"sciflow.test.test_export\").some_param == \"test\"\n",
     "assert load_module(\"sciflow.test.test_module\").some_param == 2\n",
-    "assert type(load_module(\"sciflow.test.test_data_handling\").series_param) == pd.Series\n",
-    "assert load_module(\"sciflow.utils\").odbc_connect is not None"
+    "assert type(load_module(\"sciflow.test.test_data_handling\").series_param) == pd.Series"
    ]
   },
   {
@@ -176,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def extract_param_meta(module_name: str, params: Dict[str, Any]):\n",
@@ -252,15 +235,7 @@
    "outputs": [],
    "source": [
     "nb_path = os.path.join(Path(\".\").resolve(), \"test\", \"test_data_handling.ipynb\")\n",
-    "params = params_as_dict(nb_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "params = params_as_dict(nb_path)\n",
     "param_meta = extract_param_meta(\"sciflow.test.test_data_handling\", params)"
    ]
   },
@@ -326,35 +301,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['traffic_percent', 'workers', 'model_level', 'min_date'])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nb_path = os.path.join(Path(\".\").resolve(), \"test\", \"test_multistep.ipynb\")\n",
     "params = params_as_dict(nb_path)\n",
-    "param_meta = extract_param_meta(\"sciflow.test.test_multistep\", params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "param_meta = extract_param_meta(\"sciflow.test.test_multistep\", params)\n",
     "param_meta.keys()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
