--- a/nbs/init.ipynb
+++ b/nbs/init.ipynb
@@ -1,45 +1,60 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hide\n",
-    "# default_exp init"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Imports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
+    "---\n",
+    "output-file: init.html\n",
+    "title: Imports\n",
     "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | include: false\n",
+    "# | default_exp init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "import os\n",
     "from pathlib import Path\n",
     "\n",
     "from fastcore.script import Param, call_parse\n",
     "\n",
     "from sciflow.utils import prepare_env"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
    ]
   },
   {
@@ -55,15 +70,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "env_file_blank = \"\"\"export USER=\n",
-    "export ODBC_DRIVER=\n",
-    "export ODBC_USER=\n",
-    "export ODBC_PWD=\n",
-    "export ODBC_PORT=\n",
-    "export ODBC_HOST=\n",
-    "export SSL_CERTS=\n",
     "export SCIFLOW_BUCKET=\n",
     "export SCIFLOW_BUCKET_TABLE_ALIAS=\n",
     "\"\"\""
@@ -75,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def write_env_file(sciflow_dir: Path = None):\n",
@@ -109,7 +118,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote new SciFlow environment file to: /home/sagemaker-user/git/sciflow/nbs/test/.sciflow/env\n",
+      "Skipping SciFlow environment file creation - already exists\n",
+      "Skipping SciFlow environment file creation - already exists\n",
+      "Wrote new SciFlow environment file to: /home/sagemaker-user/git/sciflow/nbs/test/.sciflow/env\n"
+     ]
+    }
+   ],
    "source": [
     "if Path(\"test/.sciflow/env\").exists():\n",
     "    Path(\"test/.sciflow/env\").unlink()\n",
@@ -145,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def read_env_file(sciflow_dir: Path = None):\n",
@@ -165,7 +185,6 @@
    "source": [
     "env_lines_wout_ppath = [\n",
     "    \"export USER='sciflow'\\n\",\n",
-    "    \"export ODBC_DRIVER=/opt/odbc/xyz.so\\n\",\n",
     "    \"export SCIFLOW_BUCKET_TABLE_ALIAS=somebucket\\n\",\n",
     "]\n",
     "\n",
@@ -188,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def edit_pythonpath(env_lines, dir_to_add: Path):\n",
@@ -221,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def write_edited_pythonpath(project_root: Path, sciflow_dir: Path = None):\n",
@@ -243,12 +262,6 @@
     "env_vars = sorted(\n",
     "    [\n",
     "        \"USER\",\n",
-    "        \"ODBC_DRIVER\",\n",
-    "        \"ODBC_USER\",\n",
-    "        \"ODBC_PWD\",\n",
-    "        \"ODBC_PORT\",\n",
-    "        \"ODBC_HOST\",\n",
-    "        \"SSL_CERTS\",\n",
     "        \"SCIFLOW_BUCKET\",\n",
     "        \"SCIFLOW_BUCKET_TABLE_ALIAS\",\n",
     "        \"PYTHONPATH\",\n",
@@ -286,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "@call_parse\n",
@@ -311,7 +324,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping SciFlow environment file creation - already exists\n"
+     ]
+    }
+   ],
    "source": [
     "sciflow_init(examples_root, sciflow_dir)"
    ]
@@ -347,20 +368,13 @@
     "with open(env_path, \"w\") as env_file:\n",
     "    env_file.write(\"\".join(env_file_contents[:-1]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
