--- a/nbs/test/test_export.ipynb
+++ b/nbs/test/test_export.ipynb
@@ -1,12 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# default_exp test.test_export"
+    "---\n",
+    "output-file: test_export.html\n",
+    "title: Some Text\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -15,7 +18,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | default_exp test.test_export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
     "\n",
     "from pathlib import Path"
    ]
@@ -23,14 +35,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "# TODO: only dealing with simple params for now - scalars & string values\n",
     "some_params = len([1, 2, 3])\n",
@@ -45,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:first\n",
+    "# | export_step first\n",
     "# irrelevant comment\n",
     "\n",
     "\n",
@@ -65,8 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "# some other comment\n",
+    "\n",
+    "\n",
     "def function():\n",
     "    results = {\"foo\": 1}\n",
     "    return results"
@@ -78,7 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export test.test_module\n",
+    "# | export test.test_module\n",
+    "\n",
     "\n",
     "created_new_module = True"
    ]
@@ -89,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exporti\n",
+    "# | exporti\n",
     "\n",
     "internal = True"
    ]
@@ -105,7 +116,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3 µs, sys: 1 µs, total: 4 µs\n",
+      "Wall time: 6.44 µs\n"
+     ]
+    }
+   ],
    "source": [
     "%time z=1"
    ]
@@ -121,7 +141,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/sagemaker-user/git/sciflow/nbs/test\n"
+     ]
+    }
+   ],
    "source": [
     "!pwd"
    ]
@@ -132,7 +160,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:preprocess\n",
+    "# | export_step preprocess\n",
+    "\n",
+    "\n",
     "def preprocess(input_path: str):\n",
     "    \"\"\"Pre-process the input data\"\"\"\n",
     "    import time\n",
@@ -145,7 +175,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing input data from /home/sagemaker-user/git/sciflow/nbs/test...\n"
+     ]
+    }
+   ],
    "source": [
     "preprocess(str(Path(\".\").resolve()))"
    ]
@@ -156,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exports\n",
+    "# | exports\n",
     "\n",
     "source_in_docs = True"
    ]
@@ -167,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "import time\n",
     "\n",
     "time.sleep(1)"
@@ -190,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "import time\n",
     "\n",
     "time.sleep(3)"
@@ -202,7 +240,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:train\n",
+    "# | export_step train\n",
+    "\n",
+    "\n",
     "def train(input_path: str, model_path: str):\n",
     "    \"\"\"Train the model\"\"\"\n",
     "    import time\n",
@@ -217,14 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Some Text"
+    "# | include: false"
    ]
   },
   {
@@ -266,7 +299,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "1 + 1"
    ]
@@ -277,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:last\n",
+    "# | export_step last\n",
     "\n",
     "\n",
     "def last():\n",
@@ -291,24 +335,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': 1}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "last()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
