--- a/nbs/test/test_module.ipynb
+++ b/nbs/test/test_module.ipynb
@@ -1,25 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# default_exp test.test_module"
+    "---\n",
+    "{}\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | default_exp test.test_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
     "\n",
     "some_param = 2"
    ]
@@ -30,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:first\n",
+    "# | export_step first\n",
     "\n",
     "\n",
     "def first(some_param: int):\n",
@@ -46,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hide"
+    "# | include: false"
    ]
   },
   {
@@ -55,7 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exporti\n",
+    "# | exporti\n",
+    "\n",
     "\n",
     "internal = True"
    ]
@@ -66,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exports\n",
+    "# | exports\n",
     "\n",
     "source_in_docs = True"
    ]
@@ -93,20 +101,13 @@
    "source": [
     "1 + 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
