--- a/nbs/test/test_multistep.ipynb
+++ b/nbs/test/test_multistep.ipynb
@@ -1,13 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# hide\n",
-    "# default_exp test.test_multistep"
+    "---\n",
+    "output-file: test_multistep.html\n",
+    "title: Multi-step Pipeline Example\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -16,7 +18,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:first\n",
+    "# | include: false\n",
+    "# | default_exp test.test_multistep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export_step first\n",
     "\n",
     "\n",
     "def something():\n",
@@ -33,13 +45,6 @@
    "outputs": [],
    "source": [
     "message = something()[\"message\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Multi-step Pipeline Example"
    ]
   },
   {
@@ -65,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "import numpy as np\n",
@@ -84,14 +89,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "traffic_percent = 1\n",
     "workers = 8\n",
@@ -105,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def get_traffic_text(percent):\n",
@@ -143,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def get_experiment_segment(traffic_percent):\n",
@@ -170,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def get_utterances(model_level=None, min_date=None, traffic_percent=100):\n",
@@ -200,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:preprocess\n",
+    "# | export_step preprocess\n",
     "\n",
     "\n",
     "def preprocess(message, model_level=None, min_date=None, traffic_percent=100):\n",
@@ -241,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "class Topics:\n",
@@ -278,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:fit\n",
+    "# | export_step fit\n",
     "\n",
     "\n",
     "def fit(documents, workers=workers):\n",
@@ -300,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slow\n",
+    "# | slow\n",
     "import time\n",
     "\n",
     "time.sleep(3)"
@@ -378,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# vis\n",
+    "# | vis\n",
     "# time.sleep(120)\n",
     "model.plot_wordcloud()"
    ]
@@ -389,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:evaluate\n",
+    "# | export_step evaluate\n",
     "\n",
     "\n",
     "def evaluate(model):\n",
@@ -447,7 +448,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
+    "\n",
+    "\n",
     "def serve_num_topics(model):\n",
     "    return model.get_num_topics()"
    ]
@@ -464,9 +467,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3 (dstk/6)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/dstk/6"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
