--- a/nbs/test/test_multistep_no_params.ipynb
+++ b/nbs/test/test_multistep_no_params.ipynb
@@ -1,13 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# hide\n",
-    "# default_exp test.test_multistep_no_params"
+    "---\n",
+    "output-file: test_multistep_no_params.html\n",
+    "title: 'Example Usage: Mock Unsupervised Modelling'\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -16,18 +18,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:first\n",
+    "# | include: false\n",
+    "# | default_exp test.test_multistep_no_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export_step first\n",
     "\n",
     "\n",
     "def something():\n",
     "    print(\"The first step\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Example Usage: Mock Unsupervised Modelling"
    ]
   },
   {
@@ -53,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "import numpy as np\n",
@@ -77,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "traffic_percent = 1\n",
     "workers = 8\n",
@@ -91,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def get_traffic_text(percent):\n",
@@ -129,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def get_experiment_segment(traffic_percent):\n",
@@ -156,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def get_utterances(model_level=None, min_date=None, traffic_percent=100):\n",
@@ -186,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:preprocess\n",
+    "# | export_step preprocess\n",
     "\n",
     "\n",
     "def preprocess(model_level=None, min_date=None, traffic_percent=100):\n",
@@ -226,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "class Topics:\n",
@@ -263,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:fit\n",
+    "# | export_step fit\n",
     "\n",
     "\n",
     "def fit(documents, workers=workers):\n",
@@ -285,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slow\n",
+    "# | slow\n",
     "import time\n",
     "\n",
     "time.sleep(3)"
@@ -318,7 +323,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.get_num_topics()"
    ]
@@ -361,9 +377,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you may want to remove plotting code from testing to speed things up\n"
+     ]
+    }
+   ],
    "source": [
-    "# vis\n",
+    "# | vis\n",
     "# time.sleep(120)\n",
     "model.plot_wordcloud()"
    ]
@@ -374,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exportn_step:evaluate\n",
+    "# | export_step evaluate\n",
     "\n",
     "\n",
     "def evaluate(model):\n",
@@ -428,7 +452,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
+    "\n",
+    "\n",
     "def serve_num_topics(model):\n",
     "    return model.get_num_topics()"
    ]
@@ -445,9 +471,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
