--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -1,20 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hide\n",
-    "# default_exp utils"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Sciflow utils"
+    "---\n",
+    "output-file: utils.html\n",
+    "title: Sciflow utils\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -23,7 +18,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | include: false\n",
+    "# | default_exp utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
     "\n",
     "import _ast\n",
     "import ast\n",
@@ -31,11 +36,11 @@
     "import subprocess\n",
     "import sys\n",
     "from pathlib import Path\n",
+    "from typing import Tuple\n",
     "\n",
-    "import nbformat\n",
-    "import pandas as pd\n",
-    "import pyodbc\n",
-    "from nbdev.export import find_default_export, get_config, read_nb\n",
+    "from execnb.nbio import read_nb\n",
+    "from fastcore.basics import AttrDict\n",
+    "from nbdev.config import get_config\n",
     "from nbqa.find_root import find_project_root"
    ]
   },
@@ -43,7 +48,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -62,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def run_shell_cmd(script: str):\n",
@@ -97,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def indent_multiline(multiline_text, indent=1):\n",
@@ -135,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def titleize(name):\n",
@@ -164,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def chunks(lst, n):\n",
@@ -186,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def lib_path(*lib_relative_path):\n",
@@ -219,17 +233,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
-    "def load_nb(nb_path):\n",
+    "def find_default_export(cells):\n",
+    "    default_export = None\n",
+    "    cell_lines = [c[\"source\"].split(\"\\n\") for c in cells]\n",
+    "    for cell in cell_lines:\n",
+    "        for line in cell:\n",
+    "            trimmed_line = line.strip().replace(\" \", \"\")\n",
+    "            if trimmed_line.startswith(\"#|default_exp\"):\n",
+    "                default_export = trimmed_line.split(\"#|default_exp\")[1].strip()\n",
+    "    return default_export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "\n",
+    "def load_nb(nb_path: Path) -> Tuple[AttrDict, Path]:\n",
     "    nb = read_nb(nb_path)\n",
     "    default_export = find_default_export(nb[\"cells\"])\n",
     "    if default_export is None:\n",
     "        raise ValueError(f\"{nb_path.name} does not contain an associated nbdev module\")\n",
     "\n",
     "    module_name = default_export.replace(\".\", \"/\")\n",
-    "    module_path = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")\n",
+    "    module_path = Path(get_config().path(\"lib_path\"), f\"{module_name}.py\")\n",
     "    return nb, module_path"
    ]
   },
@@ -239,9 +273,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb, module_path = load_nb(\"test/test_multistep.ipynb\")\n",
-    "assert type(nb) == nbformat.notebooknode.NotebookNode\n",
-    "assert os.path.exists(module_path)"
+    "from nbdev.export import nb_export\n",
+    "\n",
+    "nb_export(\"test/test_multistep.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb, module_path = load_nb(Path(\"test/test_multistep.ipynb\"))\n",
+    "assert type(nb) == AttrDict\n",
+    "module_path.exists()"
    ]
   },
   {
@@ -264,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def load_nb_module(nb_path):\n",
@@ -290,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert type(nb) == nbformat.notebooknode.NotebookNode\n",
+    "assert type(nb) == AttrDict\n",
     "assert type(ast.parse(module_code)) == _ast.Module"
    ]
   },
@@ -300,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def prepare_env(env_file_path: str = None):\n",
@@ -310,7 +366,7 @@
     "        raise EnvironmentError(\n",
     "            f\"You need to create a Sciflow environment vars file at: {env_file_path}\"\n",
     "        )\n",
-    "    with (open(env_file_path, \"r\")) as env_file:\n",
+    "    with open(env_file_path, \"r\") as env_file:\n",
     "        for line in env_file.readlines():\n",
     "            key, value = line.strip().split(\"=\", 1)\n",
     "            os.environ[key.replace(\"export \", \"\")] = value\n",
@@ -318,102 +374,6 @@
     "            p for p in os.environ[\"PYTHONPATH\"].split(\":\") if p != \"$PYTHONPATH\"\n",
     "        ]\n",
     "        sys.path.extend(python_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ODBC Connection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def odbc_connect(env_file_path: str = None):\n",
-    "    required_vars = (\"ODBC_DRIVER\", \"ODBC_HOST\", \"ODBC_PORT\", \"ODBC_USER\", \"ODBC_PWD\")\n",
-    "    if not all([v in os.environ for v in required_vars]):\n",
-    "        prepare_env(env_file_path)\n",
-    "    connection = pyodbc.connect(\n",
-    "        \"\"\"Driver={}; \n",
-    "           ConnectionType=Direct;\n",
-    "           HOST={};\n",
-    "           PORT={};\n",
-    "           AuthenticationType=Plain;\n",
-    "           UID={};\n",
-    "           PWD={};\n",
-    "           SSL=1;\n",
-    "           TrustedCerts={}\"\"\".format(\n",
-    "            os.environ[\"ODBC_DRIVER\"],\n",
-    "            os.environ[\"ODBC_HOST\"],\n",
-    "            os.environ[\"ODBC_PORT\"],\n",
-    "            os.environ[\"ODBC_USER\"],\n",
-    "            os.environ[\"ODBC_PWD\"],\n",
-    "            os.environ[\"SSL_CERTS\"],\n",
-    "        ),\n",
-    "        autocommit=True,\n",
-    "    )\n",
-    "    return connection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def query(conn, sql):\n",
-    "    with conn.cursor() as cursor:\n",
-    "        df = pd.read_sql(sql, conn)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    del os.environ[\"ODBC_DRIVER\"]\n",
-    "    del os.environ[\"ODBC_HOST\"]\n",
-    "    del os.environ[\"ODBC_PORT\"]\n",
-    "    del os.environ[\"ODBC_USER\"]\n",
-    "    del os.environ[\"ODBC_PWD\"]\n",
-    "    del os.environ[\"SSL_CERTS\"]\n",
-    "except KeyError:\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "conn = odbc_connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "assert type(conn) == pyodbc.Connection\n",
-    "assert query(conn, \"SELECT 1 AS test_col\")[\"test_col\"].iloc[0] == 1"
    ]
   },
   {
@@ -429,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def get_module_name(nb_path):\n",
@@ -444,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# | export\n",
     "\n",
     "\n",
     "def get_flow_path(nb_path, config=None, flow_provider=\"metaflow\"):\n",
@@ -463,9 +423,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:819792524951:image/sagemaker-distribution-cpu-v0"
   }
  },
  "nbformat": 4,
