Cleaning up notebooks for scilint violations

--- a/nbs/export_step.ipynb
+++ b/nbs/export_step.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -29,6 +36,7 @@
     "import os\n",
     "from collections import defaultdict\n",
     "from warnings import warn\n",
+    "from pathlib import Path\n",
     "\n",
     "import nbdev\n",
     "from fastcore.basics import ifnone\n",
@@ -38,7 +46,34 @@
     "from nbdev.config import get_config\n",
     "from nbdev.doclinks import _build_modidx, add_init, nbglob, nbglob_cli\n",
     "from nbdev.maker import ModuleMaker\n",
-    "from nbdev.process import NBProcessor"
+    "from nbdev.process import NBProcessor\n",
+    "\n",
+    "from sciflow.utils import load_nb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Test Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_nb_path = Path(\"test\", \"test_multistep.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `nbdev` Internal Patching"
    ]
   },
   {
@@ -68,7 +103,6 @@
     "        self.in_all[ifnone(exp_to, \"#\")].append(cell)\n",
     "\n",
     "    # Add a named step directive\n",
-    "\n",
     "    def _export_step_(self, cell, step_name, exp_to=None):\n",
     "        self._exporti_(cell, exp_to)\n",
     "        self.in_all[ifnone(exp_to, \"#\")].append(cell)\n",
@@ -77,10 +111,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "patch export to use new proc"
+    "proc = ExportModuleProc()\n",
+    "proc.begin()\n",
+    "assert len(proc.modules) == 0\n",
+    "proc._export_step_(\"cell code\", \"step_name\")\n",
+    "assert len(proc.modules) == 1\n",
+    "assert proc.modules['#'] == [\"cell code\"]"
    ]
   },
   {
@@ -102,6 +145,26 @@
     "            if p not in [\"nb_export\", \"ExportModuleProc\", \"optional_procs\"]\n",
     "        ]\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "assert list(optional_procs()) == [\"black_format\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `nb_named_export`\n",
+    "\n",
+    "Adapted version of: `nb_export` from `nbdev.export`. That function has two frozen dependencies, the `NBProcessor` and `ExportModuleProc`. They cannot be passed in so need to clone the function code and re-write it."
    ]
   },
   {
@@ -146,6 +209,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "_, module_path = load_nb(test_nb_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if module_path.exists():\n",
+    "    module_path.unlink()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "assert not module_path.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_named_export(test_nb_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert module_path.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(module_path, \"r\") as module_file:\n",
+    "    steps = [line for line in module_file.readlines() \n",
+    "                     if line.strip().replace(' ', '').startswith('#|export_step')]\n",
+    "    \n",
+    "assert [step.split('export_step')[1].strip() for step in steps] == ['first', 'preprocess', 'fit', 'evaluate']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CLI Commands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## ` sciflow_export`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# |export\n",
     "# adapted from nbdev.doclinks\n",
     "\n",
@@ -173,6 +313,13 @@
     "        nb_named_export(f, procs=procs)\n",
     "    add_init(get_config().lib_path)\n",
     "    _build_modidx()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test Export"
    ]
   },
   {
